@@ -1,0 +1,7 @@
+static int i;
+
+extern int i;
+
+static void f() {
+  extern int i;
+}
