@@ -1,3 +1,9 @@
+2004-03-18  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc.dg/local1.c: New test.
+
+	* gcc.dg/debug/dwarf2/c99-typedef1.c: New test.
+
 2004-03-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/14481
